refact to multi world