@@ -11,10 +11,9 @@ import java.util.Set;
 import client.MapleClient;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
-import server.TimerManager;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import tools.MaplePacketCreator;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import server.Timer;
 
 public class LoginWorker implements Runnable {
@@ -66,51 +65,60 @@ public class LoginWorker implements Runnable {
     }
 
     public void run() {
-        try {
-            int possibleLogins = LoginServer.getInstance().getPossibleLogins();
-            LoginServer.getInstance().getWorldInterface().isAvailable();
 
-            if (possibleLoginHistory.size() >= (5 * 60 * 1000) / LoginServer.getInstance().getLoginInterval()) {
-                possibleLoginHistory.remove(0);
-            }
-            possibleLoginHistory.add(possibleLogins);
+        int possibleLogins = LoginServer.getInstance().getPossibleLogins();
 
-//			log.info("Possible logins: " + possibleLogins + " (Waiting: " + waiting.size() + ")");
-            if (possibleLogins == 0 && waiting.peek().isGm()) // Server is full but front of a queue is a GM
-            {
-                possibleLogins = 1;
+        LoginServer.getRemoteWorlds().values().stream().forEach((wr) -> {
+            try {
+                wr.getWorldLoginInterface().isAvailable();
+            } catch (RemoteException ex) {
+                LoginServer.getInstance().reconnectWorld(LoginServer.getInstance().getWorldCount());
             }
-            for (int i = 0; i < possibleLogins; i++) {
-                final MapleClient client;
-                synchronized (waiting) {
-                    if (waiting.isEmpty()) {
-                        break;
-                    }
-                    client = waiting.removeFirst();
+        });
+
+        if (possibleLoginHistory.size() >= (5 * 60 * 1000) / LoginServer.getInstance().getLoginInterval()) {
+            possibleLoginHistory.remove(0);
+        }
+        possibleLoginHistory.add(possibleLogins);
+
+        if (possibleLogins == 0 && waiting.peek().isGm()) // Server is full but front of a queue is a GM
+        {
+            possibleLogins = 1;
+        }
+
+        for (int i = 0; i < possibleLogins; i++) {
+            final MapleClient client;
+            synchronized (waiting) {
+                if (waiting.isEmpty()) {
+                    break;
                 }
-                waitingNames.remove(client.getAccountName().toLowerCase());
-                if (client.finishLogin(true) == 0) {
-                    client.getSession().write(MaplePacketCreator.getAuthSuccessRequestPin(client.getAccountName()));
-                    //client.setIdleTask(TimerManager.getInstance().schedule(new Runnable() {
-                    client.setIdleTask(Timer.PingTimer.getInstance().schedule(new Runnable() {
+                client = waiting.removeFirst();
+            }
+            waitingNames.remove(client.getAccountName().toLowerCase());
+            if (client.finishLogin(true) == 0) {
+                client.getSession().write(MaplePacketCreator.getAuthSuccessRequestPin(client.getAccountName()));
+                client.setIdleTask(Timer.PingTimer.getInstance().schedule(() -> {
+                    client.getSession().close();
+                }, 10 * 60 * 10000));
+            } else {
+                client.getSession().write(MaplePacketCreator.getLoginFailed(7));
+            }
+        }
 
-                        public void run() {
-                            client.getSession().close();
-                        }
-                    }, 10 * 60 * 10000));
-                } else {
-                    client.getSession().write(MaplePacketCreator.getLoginFailed(7));
+        for (int i = 0; i < LoginServer.getInstance().getWorldCount(); i++) {
+            Map<Integer, Integer> load;
+            try {
+                load = LoginServer.getRemoteWorld(i).getWorldLoginInterface().getChannelLoad();
+                double loadFactor = 1200 / ((double) LoginServer.getInstance().getUserLimit() / load.size());
+                for (Entry<Integer, Integer> entry : load.entrySet()) {
+                    load.put(entry.getKey(), Math.min(1200, (int) (entry.getValue() * loadFactor)));
                 }
+                LoginServer.getInstance().setLoad(i, load);
+            } catch (RemoteException ex) {
+                i--;
+                LoginServer.getInstance().reconnectWorld(LoginServer.getInstance().getWorldCount());
             }
 
-            Map<Integer, Integer> load = LoginServer.getInstance().getWorldInterface().getChannelLoad();
-            double loadFactor = 1200 / ((double) LoginServer.getInstance().getUserLimit() / load.size());
-            for (Entry<Integer, Integer> entry : load.entrySet()) {
-                load.put(entry.getKey(), Math.min(1200, (int) (entry.getValue() * loadFactor)));
-            }
-            LoginServer.getInstance().setLoad(load);
-        } catch (RemoteException ex) {
-            LoginServer.getInstance().reconnectWorld();
         }
     }
 
